tests/short_assign_top_level_bad.stderr
tests/short_assign_top_level_bad.hop:2:1: error: HOP1005: expected declaration
